--- a/puppet.conf
+++ b/puppet.conf
@@ -1,15 +1,15 @@
 [agent]
-    certname        = puppetmaster
-    pluginsync      = true
+  certname        = puppetmaster
+  pluginsync      = true
 
 [master]
-    certname        = puppet
-    confdir         = /opt/puppet
-    vardir	    = /opt/varpuppet/lib/puppet
-    basemodulepath  = $confdir/site-modules:$confdir/modules:/usr/share/puppet/modules
-    factpath        = $confdir/facts:/var/lib/puppet/lib/facter:/var/lib/puppet/facts
-    autosign        = true
-    hiera_config    = $confdir/hiera.yaml
-    rest_authconfig = $confdir/auth.conf
-    ssldir          = $vardir/ssl
-    csr_attributes  = $confdir/csr_attributes.yaml
+  certname        = puppet
+  confdir         = /etc/puppet
+  vardir          = /var/lib/puppet
+  basemodulepath  = $confdir/site-modules:$confdir/modules:/usr/share/puppet/modules
+  factpath        = $confdir/facts:$vardir/lib/facter:$vardir/facts
+  autosign        = true
+  hiera_config    = $confdir/hiera.yaml
+  rest_authconfig = $confdir/auth.conf
+  ssldir          = $vardir/ssl
+  csr_attributes  = $confdir/csr_attributes.yaml
