Configure directory environments

--- a/puppet.conf
+++ b/puppet.conf
@@ -6,6 +6,7 @@
   certname        = puppet
   confdir         = /etc/puppet
   vardir          = /var/lib/puppet
+  environmentpath = $confdir/environments
   basemodulepath  = $confdir/site-modules:$confdir/modules:/usr/share/puppet/modules
   factpath        = $confdir/facts:$vardir/lib/facter:$vardir/facts
   autosign        = true
